--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "i18next": "^25.6.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-i18next": "^16.3.5"
+    "react-i18next": "^16.3.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
